# src/api/configuration.ts
@@ -1,34 +1,10 @@
-/*
- * MIT License
- *
- * Copyright (c) 2021 schulterklopfer/__escapee__
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILIT * Y, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
- */
-
 // tslint:disable
 /**
  * Satoshi Go - API
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 0.1.13
- *
+ * OpenAPI spec version: 0.2.2
+ * 
  *
  * NOTE: This file is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
@@ -36,54 +12,54 @@
  */
 
 export interface ConfigurationParameters {
-  apiKey?: string | ((name: string) => string);
-  username?: string;
-  password?: string;
-  accessToken?: string | ((name: string, scopes?: string[]) => string);
-  basePath?: string;
+    apiKey?: string | ((name: string) => string);
+    username?: string;
+    password?: string;
+    accessToken?: string | ((name: string, scopes?: string[]) => string);
+    basePath?: string;
 }
 
 export class Configuration {
-  /**
-   * parameter for apiKey security
-   * @param name security name
-   * @memberof Configuration
-   */
-  apiKey?: string | ((name: string) => string);
-  /**
-   * parameter for basic security
-   *
-   * @type {string}
-   * @memberof Configuration
-   */
-  username?: string;
-  /**
-   * parameter for basic security
-   *
-   * @type {string}
-   * @memberof Configuration
-   */
-  password?: string;
-  /**
-   * parameter for oauth2 security
-   * @param name security name
-   * @param scopes oauth2 scope
-   * @memberof Configuration
-   */
-  accessToken?: string | ((name: string, scopes?: string[]) => string);
-  /**
-   * override base path
-   *
-   * @type {string}
-   * @memberof Configuration
-   */
-  basePath?: string;
+    /**
+     * parameter for apiKey security
+     * @param name security name
+     * @memberof Configuration
+     */
+    apiKey?: string | ((name: string) => string);
+    /**
+     * parameter for basic security
+     * 
+     * @type {string}
+     * @memberof Configuration
+     */
+    username?: string;
+    /**
+     * parameter for basic security
+     * 
+     * @type {string}
+     * @memberof Configuration
+     */
+    password?: string;
+    /**
+     * parameter for oauth2 security
+     * @param name security name
+     * @param scopes oauth2 scope
+     * @memberof Configuration
+     */
+    accessToken?: string | ((name: string, scopes?: string[]) => string);
+    /**
+     * override base path
+     * 
+     * @type {string}
+     * @memberof Configuration
+     */
+    basePath?: string;
 
-  constructor(param: ConfigurationParameters = {}) {
-    this.apiKey = param.apiKey;
-    this.username = param.username;
-    this.password = param.password;
-    this.accessToken = param.accessToken;
-    this.basePath = param.basePath;
-  }
+    constructor(param: ConfigurationParameters = {}) {
+        this.apiKey = param.apiKey;
+        this.username = param.username;
+        this.password = param.password;
+        this.accessToken = param.accessToken;
+        this.basePath = param.basePath;
+    }
 }
